[package]
name = "project-ion"
description = "A project manager for overworking students"
version = "0.1.0"
authors = ["darkwater4213 <darkwater4213@protonmail.com>"]
edition = "2021"
readme = "README.md"

documentation = "https://github.com/darkwater4213/pullster-proj"
homepage = "https://github.com/darkwater4213/pullster-proj"
repository = "https://github.com/darkwater4213/pullster-proj"

keywords = ["project", "tui", "student", "school", "homework", "obsidian"]
categories = ["command-line-utilities"]
license = "GPL-3.0"

[[bin]]
name = "ion"
path = "src/main.rs"

[package.metadata.deb]
section = "utils"
assets = [
  [
    "target/release/ion",
    "usr/bin/",
    "755",
  ],
  [
    "LICENSE",
    "usr/share/doc/project-ion/",
    "644",
  ],
  [
    "README.md",
    "usr/share/doc/project-ion/README",
    "644",
  ],
]
# extended-description = """\
# Project ION is a manager for the many school assignments you're juggling
# """

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
canvas_lms_connector = "0.1.6"
clap = { version = "4.4.11", features = ["derive"] }
crossterm = "0.27.0"
nu-ansi-term = "0.49.0"
time = "0.3.30"
tui = "0.19.0"
